# quant-vnpy

./: .env.example  Makefile  README.md  README_STOCK.md  check_interval.py  project_architecture.md  pyproject.toml
app/: __init__.py
app/api/: __init__.py
app/api/resources/: __init__.py  health.py
cfg/: unios.toml
cmd/: main.py
data/: 600000.csv  600036.csv  vnpy_trader.db
database/: init_mysql.sql
internal/backtest/: __init__.py  backtest_analyzer.py  backtest_engine.py  data_loader.py  demo.py  strategies.py
internal/backtest/api/: __init__.py  routes.py
internal/config/: __init__.py  config_manager.py
internal/data/: __init__.py  dividend_adjustment.py
internal/database/: __init__.py  vnpy_init.py
internal/fetcher/: __init__.py  data_processor.py  data_sources.py  demo.py  stock_fetcher.py
internal/fetcher/api/: __init__.py  routes.py
internal/risk/: __init__.py  demo.py  risk_assessor.py  routes.py  stock_risk_manager.py  vnpy_integration.py
internal/strategies/: STRATEGIES.md  bull_trend_strategy.py  lstm_strategy.py  mean_reversion_strategy.py  stock_strategies.py  turtle_trading_strategy.py
internal/task/: __init__.py  demo_stock_analysis.py  task_manager.py  tasks.py
internal/task/api/: __init__.py  routes.py
internal/trading/: __init__.py  account_manager.py  cost_calculator.py  demo.py  trading_time.py  vnpy_demo.py
internal/trading/api/: routes.py
internal/trading/simulator/: __init__.py  simulator.py  (+2 more)
internal/utils/: __init__.py  logging.py
scripts/: init_mysql_database.py
tests/: test_stock_trading.py
